--- a/templates/index.html
+++ b/templates/index.html
@@ -1,72 +1,55 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Statistical Arbitrage</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.4/socket.io.js" integrity="sha512-aMGMvNYu8Ue4G+fHa359jcPb1u+ytAF+P2SCb+PxrjCdO3n3ZTxJ30zuH39rimUggmTwmh2u7wvQsDTHESnmfQ==" crossorigin="anonymous"></script>
-    <script type="text/javascript" charset="utf-8">
-        $(document).ready(function() {
-            // Connect to the Socket.IO server.
-            // The connection URL has the following format, relative to the current page:
-            //     http[s]://<domain>:<port>[/<namespace>]
-            var socket = io();
+{% extends "base.html" %}
 
-            // Event handler for new connections.
-            // The callback function is invoked when a connection with the
-            // server is established.
-            socket.on('connect', function() {
-                socket.emit('my_event', {data: 'I\'m connected!'});
-            });
+{% block head %}
+<title>Statistical Arbitrage</title>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.4/socket.io.js" integrity="sha512-aMGMvNYu8Ue4G+fHa359jcPb1u+ytAF+P2SCb+PxrjCdO3n3ZTxJ30zuH39rimUggmTwmh2u7wvQsDTHESnmfQ==" crossorigin="anonymous"></script>
+<script type="text/javascript" charset="utf-8">
+    $(document).ready(function() {
+        // Connect to the Socket.IO server.
+        // The connection URL has the following format, relative to the current page:
+        //     http[s]://<domain>:<port>[/<namespace>]
+        var socket = io();
 
-            // Event handler for server sent data.
-            // The callback function is invoked whenever the server emits data
-            // to the client. The data is then displayed in the "Received"
-            // section of the page.
-            socket.on('my_response', function(msg, cb) {
-                $('#btc').val(msg.btc)
-                $('#eth').val(msg.eth)
-                $('#usdt').val(msg.usdt)
-                if (cb)
-                    cb();
-            });
+        // Event handler for new connections.
+        // The callback function is invoked when a connection with the
+        // server is established.
+        socket.on('connect', function() {
+            socket.emit('my_event', {data: 'I\'m connected!'});
         });
-    </script>
-    <script src="https://unpkg.com/lightweight-charts/dist/lightweight-charts.standalone.production.js"></script>
-</head>
-<body>
-    <form action="/" method="post">
-        <button name="HOME" type="submit">HOME</button>
-    </form>
-    <form action="/ga" method="post">
-        <button name="GA" type="submit">Genetic Algorithm </button>
-    </form>
-    <form action="/BTCUSDT" method="post">
-        <button name="btc" type="submit">BTC</button>
-    </form>
-    <form action="/ETHUSDT" method="post">
-        <button name="eth" type="submit">ETH</button>
-    </form>
-        <h3>settings</h3>
-        <section id="order">
-            USDT Start
-            <input type="text"/>
-            Order amount 
-            <input type="text"/>
-        </section>
-        <br>
-        <form action="/start/" method="post">
-            <button name="startBtn" type="submit">start</button>
-        </form>
-        </div>
-        <h2>Receive:</h2>
-        <label for="fname">BTC:</label>
-        <input id="btc" type="text" value="0" readonly/>
-        <label for="fname">ETH:</label>
-        <input id="eth" type="text" value="0" readonly/>
-        <label for="fname">USDT:</label>
-        <input id="usdt" type="text" value="0" readonly/>
-</body>
-</html>
+
+        // Event handler for server sent data.
+        // The callback function is invoked whenever the server emits data
+        // to the client. The data is then displayed in the "Received"
+        // section of the page.
+        socket.on('my_response', function(msg, cb) {
+            $('#btc').val(msg.btc)
+            $('#eth').val(msg.eth)
+            $('#usdt').val(msg.usdt)
+            if (cb)
+                cb();
+        });
+    });
+</script>
+{% endblock %}
+
+{% block content %}
+<h3>settings</h3>
+<form action="/start/" method="post">
+    <section id="order">
+        USDT Start
+        <input type="number" id="usdt start" required value="{{usdt}}" name="usdt" min="0" max="1000000000"/>
+        Order amount 
+        <input type="number" id="percentage" required value="{{amount}}" name="quantity" min="1" max="30">
+    </section>
+    <br>
+        <button name="startBtn" type="submit">start</button>
+</form>
+</div>
+<label for="fname">BTC:</label>
+<input id="btc" type="text" value="0" readonly/>
+<label for="fname">ETH:</label>
+<input id="eth" type="text" value="0" readonly/>
+<label for="fname">USDT:</label>
+<input id="usdt" type="text" value="0" readonly/>
+{% endblock %}
