--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,67 @@
               background-color: #04AA6D;
               color: white;
             }
+            .button {
+              position: relative;
+              background-color: #04AA6D;
+              border: none;
+              color: #FFFFFF;
+              padding: 14px;
+              text-align: center;
+              transition-duration: 0.4s;
+              text-decoration: none;
+              overflow: hidden;
+              cursor: pointer;
+              margin-left: 20px;
+            }
+
+            .button:after {
+              content: "";
+              background: #f1f1f1;
+              display: block;
+              position: absolute;
+              padding-top: 300%;
+              padding-left: 350%;
+              margin-left: -20px !important;
+              margin-top: -120%;
+              opacity: 0;
+              transition: all 0.8s
+            }
+            .button:active:after {
+              padding: 0;
+              margin: 0;
+              opacity: 1;
+              transition: 0s
+            }
             </style>
+            
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.4/socket.io.js" integrity="sha512-aMGMvNYu8Ue4G+fHa359jcPb1u+ytAF+P2SCb+PxrjCdO3n3ZTxJ30zuH39rimUggmTwmh2u7wvQsDTHESnmfQ==" crossorigin="anonymous"></script>
+<script type="text/javascript" charset="utf-8">
+    $(document).ready(function() {
+        // Connect to the Socket.IO server.
+        // The connection URL has the following format, relative to the current page:
+        //     http[s]://<domain>:<port>[/<namespace>]
+        var socket = io();
+
+        // Event handler for new connections.
+        // The callback function is invoked when a connection with the
+        // server is established.
+        socket.on('connect', function() {
+            socket.emit('my_event', {data: 'I\'m connected!'});
+        });
+
+        // Event handler for server sent data.
+        // The callback function is invoked whenever the server emits data
+        // to the client. The data is then displayed in the "Received"
+        // section of the page.
+        socket.on('my_response', function(msg, cb) {
+            $('#Results tr:last').after('<tr> <td>'+msg.date+'</td> <td>'+msg.btc+'</td> <td>'+msg.eth+'</td> <td>'+msg.usdt+'</td> <td>'+msg.event+'</td> </tr>')
+            if (cb)
+                cb();
+        });
+    });
+</script>
     </head>
 
     <body>
@@ -39,6 +99,8 @@
             <a href="/ga" method="post">Genetic Algorithm</a>
             <a href="/BTCUSDT">BTC</a>
             <a href="/ETHUSDT">ETH</a>
+            <a href="/portfolio">Portfolio</a>
+
         </div>
         {% block content %}{% endblock %}
     </body>
