--- a/templates/btc.html
+++ b/templates/btc.html
@@ -2,11 +2,17 @@
 
 {% block head %}
 <title>BTC</title>
+<style>
+    .chart{
+        padding: 4px 12px;
+    }
+</style>
 <script src="https://unpkg.com/lightweight-charts/dist/lightweight-charts.standalone.production.js"></script>
 {% endblock %}
 
 {% block content %}
-<h1>BTCUSDT</h1>
-<div id="chart"></div>
-<script src="{{ url_for('static', filename='btc.js') }}"></script>
+<h2>BTCUSDT</h2>
+<div id="chart" class="chart">
+    <script src="{{ url_for('static', filename='btc.js') }}"></script>
+</div>
 {% endblock %}
