--- a/templates/ga.html
+++ b/templates/ga.html
@@ -2,6 +2,20 @@
 
 {% block head %}
 <title>Genetic Algorithm</title>
+<style>
+.danger {
+    margin-bottom: 15px;
+    padding: 4px 12px;
+    background-color: #ffdddd;
+    border-left: 6px solid #f44336;
+}
+.info {
+    margin-bottom: 15px;
+    padding: 4px 12px;
+    background-color: #e7f3fe;
+    border-left: 6px solid #2196F3;
+}
+</style>
 {% endblock %}
 
 {% block content %}
@@ -34,6 +48,12 @@
     </section>
     <br>
     <form action="/forward/" method="post">
-        <button name="forwardBtn" type="submit">Optimize Parameters</button>
+        <button class="button" name="forwardBtn" type="submit">Optimize Parameters</button>
     </form>
+    <div class="info">
+        <p><strong>Info!</strong> Optimize Parameters will take two hours</p>
+    </div>
+    <div class="danger">
+        <p><strong>Danger!</strong> You can't exit from the page if you start optimizing</p>
+    </div>
 {% endblock %}
