--- a/templates/index.html
+++ b/templates/index.html
@@ -2,35 +2,30 @@
 
 {% block head %}
 <title>Statistical Arbitrage</title>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.4/socket.io.js" integrity="sha512-aMGMvNYu8Ue4G+fHa359jcPb1u+ytAF+P2SCb+PxrjCdO3n3ZTxJ30zuH39rimUggmTwmh2u7wvQsDTHESnmfQ==" crossorigin="anonymous"></script>
-<script type="text/javascript" charset="utf-8">
-    $(document).ready(function() {
-        // Connect to the Socket.IO server.
-        // The connection URL has the following format, relative to the current page:
-        //     http[s]://<domain>:<port>[/<namespace>]
-        var socket = io();
-
-        // Event handler for new connections.
-        // The callback function is invoked when a connection with the
-        // server is established.
-        socket.on('connect', function() {
-            socket.emit('my_event', {data: 'I\'m connected!'});
-        });
-
-        // Event handler for server sent data.
-        // The callback function is invoked whenever the server emits data
-        // to the client. The data is then displayed in the "Received"
-        // section of the page.
-        socket.on('my_response', function(msg, cb) {
-            $('#btc').val(msg.btc)
-            $('#eth').val(msg.eth)
-            $('#usdt').val(msg.usdt)
-            if (cb)
-                cb();
-        });
-    });
-</script>
+<style>
+    #Results {
+      font-family: Arial, Helvetica, sans-serif;
+      border-collapse: collapse;
+      width: 100%;
+    }
+    
+    #Results td, #Results th {
+      border: 1px solid #ddd;
+      padding: 8px;
+    }
+    
+    #Results tr:nth-child(even){background-color: #f2f2f2;}
+    
+    #Results tr:hover {background-color: #ddd;}
+    
+    #Results th {
+      padding-top: 12px;
+      padding-bottom: 12px;
+      text-align: left;
+      background-color: #04AA6D;
+      color: white;
+    }
+    </style>
 {% endblock %}
 
 {% block content %}
@@ -39,18 +34,36 @@
     <section id="order">
         USDT Start
         <input type="number" id="usdt start" required value="{{usdt}}" name="usdt" min="20" max="1000000000"/>
-        Order amount 
+        Order amount(percentage)
         <input type="number" id="percentage" required value="{{amount}}" name="quantity" min="1" max="30">
     </section>
     <br>
-        <button name="startBtn" type="submit">start</button>
+        <button class="button" id="start"  name="startBtn" type="submit">Start</button>
 </form>
 </div>
-<h4>Portfolio</h4>
-<label for="fname">BTC:</label>
-<input id="btc" type="text" value="0" readonly/>
-<label for="fname">ETH:</label>
-<input id="eth" type="text" value="0" readonly/>
-<label for="fname">USDT:</label>
-<input id="usdt" type="text" value="0" readonly/>
+<h4>Results</h4>
+<a href="/DownloadCsv">Download csv</a>
+<table id='Results'>
+    <tr>
+      <th>Date</th>
+      <th>BTC Amont</th>
+      <th>ETH Amont</th>
+      <th>Portfolio</th>
+      <th>Event</th>
+        {% for line in table %}
+        <tr>
+            {% for element in line %}
+            <td>
+                {{ element }}
+            </td>
+            {% endfor %}
+        </tr>
+        {% endfor %}
+    </tr>
+  </table>
+  <script>
+    function Disabling() {
+      document.getElementById("start").disabled = true;
+    }
+    </script>
 {% endblock %}
