--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
     <section id="order">
         USDT Start
         <input type="number" id="usdt start" required value="{{usdt}}" name="usdt" min="20" max="1000000000"/>
-        Order amount(percentage)
+        Investment percentage
         <input type="number" id="percentage" required value="{{amount}}" name="quantity" min="1" max="40">
     </section>
     <br>
